Fixed major layout bug

--- a/main.css
+++ b/main.css
@@ -314,12 +314,15 @@ html {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 26px auto;
+    padding-top: 1rem;
+    box-sizing: border-box;
+    /*grid-template-rows: 26px auto;*/
 }
 
 #main-container {
     display: grid;
     grid-template-rows: 50% auto;
+    row-gap: 2rem;
     /*padding-top: 1rem;*/
     height: 100%;
     width: 100%;
@@ -331,6 +334,7 @@ html {
     grid-template-columns: 50% auto;
     height: 100%;
     column-gap: 1rem;
+    box-sizing: border-box;
     width: 98%;
     margin-left: auto;
     margin-right: auto;
@@ -754,12 +758,11 @@ html {
 
 #main-container #bottom-layer {
     height: 100%;
-    width: 98%;
-    padding-top: 1rem;
     padding-bottom: 1rem;
+    box-sizing: border-box;
+    width: 98%;
     margin-left: auto;
     margin-right: auto;
-    box-sizing: border-box;
 }
 
 #main-container #bottom-layer #timeline {
